--- a/Inmobiliaria/war/css/theme-1.css
+++ b/Inmobiliaria/war/css/theme-1.css
@@ -434,7 +434,7 @@ nav hr {
   bottom: 7px;
 }
 .logo.logo-wide {
-  max-width: 140px;
+  max-width: 150px;
   bottom: 12px;
   margin-bottom: -6px;
 }
@@ -802,12 +802,17 @@ header .btn:last-child {
   height: 150%;
   top: -20%;
 }
+
+/*banner dimensions*/
 .hero-slider {
   padding: 0px;
+  width: 1600px;
   position: relative;
+  left:150px;
 }
+/*Heigth Banner*/
 .hero-slider .slides li {
-  height: 650px;
+  height: 600px;
   overflow: hidden;
   position: relative;
 }
@@ -835,6 +840,7 @@ header .btn:last-child {
     display: none !important;
   }
 }
+/*space banner*/
 .hero-slider .slides li.overlay:before {
   position: absolute;
   width: 100%;
@@ -843,7 +849,7 @@ header .btn:last-child {
   content: '';
   opacity: 0.3;
   z-index: 2;
-  background-color: #222222;
+  background-color: #808080;
 }
 .header-icons {
   padding: 160px 0px;
@@ -3826,10 +3832,11 @@ footer.short-2 .contact-action:hover {
     margin-left: 0px;
   }
 }
+/*Logo dimensions*/
 .simple-bar .logo {
-  max-width: 800px;
-  max-height: 40px;
-  bottom: 12px;
+  max-width: 280px;
+  max-height: 200px;
+  bottom: -15px;
   -webkit-transition: all .3s ease;
   -moz-transition: all .3s ease;
   transition: all .3s ease;
@@ -3837,8 +3844,10 @@ footer.short-2 .contact-action:hover {
 .simple-bar .social-icons {
   margin-left: 32px;
 }
+/*Top margin*/
 .simple-bar .nav-menu {
-  padding-top: 54px;
+  padding-top: 15px;
+  margin-left: 0px;
   -webkit-transition: all .3s ease;
   -moz-transition: all .3s ease;
   transition: all .3s ease;
